<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="top"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

  <!-- Linear layout within scroll view to take care of the list of instructions -->
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="5dp" >
    
    	<!-- Learn title -->
    	<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
 		android:textSize="28sp" />
    
    	 <!-- Learn Text 1 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text1"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />
    	
    	<!-- Image of Spectrum -->
  	   <ImageView
  	   android:layout_gravity="center"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/spectrum" />   

    	<!-- Learn Text 2 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text2"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />

       <!-- Image of Bayer Filter -->
  	   <ImageView
       android:layout_width="250dp"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/bayer_300" />   
        
       	<!-- Learn Text 3 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text3"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />
        
       <!-- Image of sweets -->
  	   <ImageView
       android:layout_width="fill_parent"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/sweets" />   
       
  	    <!-- Learn Text 4 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text4"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />
        
        <!-- Image of RGB -->
  	   <ImageView
       android:layout_width="200dp"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/face_colour_300" />  
        
        
         <!-- Learn Text 5 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text5"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" /> 
        
        
       <!-- Image of Equation and false colour image -->
  	   <ImageView
       android:layout_width="250dp"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/eqn_falsecolour_300" />   
        
  	   
  	     <!-- Learn text 6 -->
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
	        <TextView
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:text="@string/learn_text6"
			android:textColor="@color/white"
			android:textSize="15sp" />
        
        	<!--  Thumb image -->
	        <ImageView
	        android:layout_width="80dp"
	        android:paddingLeft="10dp"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/dummy_string"
	        android:adjustViewBounds="true"
	        android:src="@drawable/thumb" />     
        </LinearLayout>
  	   
  	    <!-- Learn Text 7 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text7"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />  

        
       <!-- Coloured images of thumb imprint -->
  	   <ImageView
       android:layout_width="300dp"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/imprint" />   
        
        <!-- Learn Text 8 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/learn_text8"
		android:textColor="@color/white"
		android:textSize="15sp"
		android:paddingBottom="10dp" />
  	   
  	          <!-- Image of graph -->
  	   <ImageView
       android:layout_width="250dp"
       android:layout_gravity="center"
       android:layout_height="wrap_content"
       android:contentDescription="@string/dummy_string"
       android:adjustViewBounds="true"
       android:paddingBottom="10dp"
       android:src="@drawable/graph" />  
        
        
</LinearLayout>
        

</ScrollView>
