<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="top"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

 
	  <!-- Linear layout within scroll view to take care of the list of instructions -->
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    	<!-- Instructions title -->
    	<!-- NB Do not delete the following TextView -->
    	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
 		android:textSize="28sp" />
    
        <!-- Step 1 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/step_1"
		android:textColor="@color/white"
		android:textSize="15sp" />
        
        <!-- Step 2 -->
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
	        <TextView
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:text="@string/step_2"
			android:textColor="@color/white"
			android:textSize="15sp" />
        
        	<!--  Sill image -->
	        <ImageView
	        android:layout_width="80dp"
	        android:paddingLeft="10dp"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/dummy_string"
	        android:adjustViewBounds="true"
	        android:src="@drawable/sill_region" />     
        </LinearLayout>
         
         

        
        <!-- Step 3 - Linear Layout -->
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
	        <TextView
			android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:text="@string/step_3"
			android:textColor="@color/white"
			android:textSize="15sp" />
        
        	<!--  Questions Image -->
	        <ImageView
	        android:layout_width="120dp"
	        android:paddingLeft="10dp"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/dummy_string"
	        android:adjustViewBounds="true"
	        android:src="@drawable/questions" />  
        </LinearLayout>
        
	
	        

</LinearLayout>        

</ScrollView>
